# imjack

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  imgui_elements.cpp  imgui_elements.h  main.cpp  myimgui.cpp  myimgui.hpp  testjack.cpp  testjack.hpp  testjack_.cpp  testjack_.hpp
.github/workflows/: cmake-single-platform.yml
jconvolver-1.1.0/: README  README.CONFIG
jconvolver-1.1.0/config-files/: hilbert.conf  weird.conf
jconvolver-1.1.0/config-files/stresstest/: stress5.conf  stress6.conf  stress7.conf
jconvolver-1.1.0/config-files/xtalk-cancel/: EYCv2-48.conf
jconvolver-1.1.0/source/: Makefile  config.cc  fconfig.cc  fconvolver.cc  jclient.cc  jclient.h  jconfig.cc  jconvolver.cc  makemulti.cc
jconvolver_inc/: config.cc  config.h  imjack_glue.cc  imjack_glue.h
